updated the library card module
