# src/spa/src/dto/models/library-card-for-detailed-dto.ts
@@ -1,11 +1,13 @@
 /* tslint:disable */
 /* eslint-disable */
 import { AddressDto } from './address-dto';
+import { CheckoutForListDto } from './checkout-for-list-dto';
 export interface LibraryCardForDetailedDto {
   address?: AddressDto;
   addressId?: number;
   age?: number;
   cardNumber?: null | string;
+  checkouts?: null | Array<CheckoutForListDto>;
   created?: string;
   email?: null | string;
   fees?: number;
